# MindMate

backend/: .env  main.py  pyproject.toml  test_model.py
frontend/src/: App.jsx
