[project]
name = "mindmate-backend"
version = "0.1.0"
description = "MindMate FastAPI backend"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.75.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
